crates/api/tests/snapshots/snapshots__user_progress.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "position_ms": 300,
    "updated_at": "[updated_at]",
    "user_id": "u1",
    "version_id": "v1"
  },
  "status": 200
}
