crates/api/tests/snapshots/snapshots__user_self.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "account_role": "user",
    "active": true,
    "bitrate_cap": null,
    "concurrent_stream_limit": null,
    "created_at": "[created_at]",
    "id": "u1",
    "max_content_rating": null,
    "preferred_audio": [],
    "preferred_subtitle": [],
    "role": "user",
    "updated_at": "[updated_at]",
    "username": "user"
  },
  "status": 200
}
