crates/api/tests/snapshots/snapshots__users_activity.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "items": [],
    "limit": 50,
    "offset": 0,
    "total": 0
  },
  "status": 200
}
