crates/api/tests/snapshots/snapshots__users_create.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "bitrate_cap": null,
    "concurrent_stream_limit": null,
    "created_at": "[created_at]",
    "id": "user-1",
    "max_content_rating": null,
    "preferred_audio": [],
    "preferred_subtitle": [],
    "role": "player",
    "updated_at": "[updated_at]",
    "username": "newbie"
  },
  "status": 201
}
